Refactor: Phase 2 - Implement Command pattern
- Create IAcknowledgementCommand interface for polymorphic command execution
- Add AcknowledgementCommandOutputs class with EmailPrepOutput, SendOutput, UpdateOutput
- Implement OpportunityValidationCommand for opportunity filtering and validation
- Implement EmailPreparationCommand for SingleEmailMessage preparation
- Implement EmailSendCommand for email sending with exception handling
- Implement DatabaseUpdateCommand for acknowledgment date updates
- Implement ResultAggregationCommand for final result compilation
- Replace monolithic sendEmailsCoreDetailed method with command orchestration
- Update package.xml with all new command classes

--- a/force-app/main/default/classes/DonationAcknowledgementService.cls
+++ b/force-app/main/default/classes/DonationAcknowledgementService.cls
@@ -58,6 +58,7 @@ public with sharing class DonationAcknowledgementService {
   }
 
   // Individual opportunity result with detailed tracking
+  // TODO: This is growing in importance, we might want to rename it
   @TestVisible
   public class OpportunityResult {
     @AuraEnabled
