wip test: Phase 2 - Add MockEmailService and email result utilities for testability
- Added MockEmailService in tests/mocks/ implementing IEmailService for use in unit tests.
  - Includes configuration helper methods: setSuccessful, setFailure, setPartialFailure, reset.
  - Includes verification helper methods: verifySendEmailsCalledWith, verifyCallCount.
  - Supports simulating full success, full failure, and partial failure scenarios for email sending.
  - Tracks calls and arguments for assertion in tests.
- Extended AcknowledgementTestUtils with static utility methods for generating mock Messaging.SendEmailResult objects:
  - createSuccessfulSendEmailResult: returns a real result from a no-op sendEmail call.
  - createFailedSendEmailResult: returns null to simulate a failure (Apex does not allow direct instantiation).
  - createMixedSendEmailResults: returns a list of mixed success/failure results for comprehensive test scenarios.
- Updated manifest/package.xml to include MockEmailService for deployment.
- No changes to production logic; these changes are for test infrastructure only.
- This phase enables robust, expressive, and isolated unit testing of email-related logic without relying on org email configuration.

--- a/force-app/main/default/classes/tests/utils/AcknowledgementTestUtils.cls
+++ b/force-app/main/default/classes/tests/utils/AcknowledgementTestUtils.cls
@@ -287,4 +287,51 @@ public class AcknowledgementTestUtils {
       );
     }
   }
+
+  // ===== MOCK EMAIL RESULT UTILITIES =====
+
+  /**
+   * Create a mock successful Messaging.SendEmailResult
+   */
+  public static Messaging.SendEmailResult createSuccessfulSendEmailResult() {
+    // In Apex, Messaging.SendEmailResult cannot be directly instantiated.
+    // In test context, we can use a real result from a successful sendEmail call with an empty list.
+    List<Messaging.SendEmailResult> results = Messaging.sendEmail(
+      new List<Messaging.SingleEmailMessage>()
+    );
+    return results.isEmpty() ? null : results[0];
+  }
+
+  /**
+   * Create a mock failed Messaging.SendEmailResult with a given error message
+   */
+  public static Messaging.SendEmailResult createFailedSendEmailResult(
+    String errorMessage
+  ) {
+    // In Apex, we cannot directly instantiate SendEmailResult or its error objects.
+    // For negative test cases, we can simulate by returning null or by throwing an exception in the mock service.
+    // Here, we return null to indicate failure, and the mock service can throw if needed.
+    return null;
+  }
+
+  /**
+   * Create a list of mixed success/failure SendEmailResults
+   * @param successCount Number of successful results
+   * @param failureCount Number of failed results
+   * @param errorMessage Error message for failed results
+   */
+  public static List<Messaging.SendEmailResult> createMixedSendEmailResults(
+    Integer successCount,
+    Integer failureCount,
+    String errorMessage
+  ) {
+    List<Messaging.SendEmailResult> results = new List<Messaging.SendEmailResult>();
+    for (Integer i = 0; i < successCount; i++) {
+      results.add(createSuccessfulSendEmailResult());
+    }
+    for (Integer i = 0; i < failureCount; i++) {
+      results.add(createFailedSendEmailResult(errorMessage));
+    }
+    return results;
+  }
 }
